--- a/README
+++ b/README
@@ -4,3 +4,19 @@ nlmk is a small library for nlp specialized for Macedonian language,
 focusing on localization of the tokenizer and the stopwords. 
 People familiar with nltk (python) can be introduced painlessly. 
 It also has focus on working with large files (texts).
+
+Requirements:
+    nlmk requires the following third party libraries:
+    - pyparsing
+
+
+N-gram extraction from texts:
+
+    Use the nlmk.ngramgen module, or call it through the run.py caller.
+
+    Example:
+    python run.py ngramgen corpus/racin.txt my_result 10 2 1
+    This will generate output file with unigrams, bigrams and trigrams:
+    - the unigrams (words) show up at least 10 times
+    - the bigrams occur at least 2 times
+    - the trigrams occur at least 1 time (all trigrams)
